@@ -502,7 +502,7 @@ mp4 format is available for a limited number of videos.
 
 =item B<dailymotion.com>
 
-Format: (flv|spak-mini|vp6-hq|vp6-hd|vp6|h264)
+Format: (flv|spark-mini|vp6-hq|vp6-hd|vp6|h264)
 
 The HD and HQ videos may not always be available.
 
@@ -511,7 +511,7 @@ The HD and HQ videos may not always be available.
   h264      .. h264    (512x384)
   vp6       .. on2     (320x240)
   flv       .. flv     (320x240)
-  spak-mini .. flv       (80x60)
+  spark-mini .. flv       (80x60)
 
 =item B<spiegel.de>
 
